--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <meta name="discription" content="Reversi">
     <link rel="shortcut icon" type="images/x-icon" href="https://ching367436.github.io/icon/Ching367436.ico">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168931196-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168931196-3');
+    </script>
+
 </head>
 
 <body>
