--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <label for="blackAi">Black</label>
         <select name="blackAi" id="blackAi">
             <option value="none">No AI</option>
-            <option value="random">Ramdom</option>
+            <option value="random">Random</option>
             <option value="maxScoreSpot">maxScoreSpot</option>
         </select><br><br>
 
         <label for="whiteAi">White</label>
         <select name="whiteAi" id="whiteAi">
             <option value="none">No AI</option>
-            <option value="random">Ramdom</option>
+            <option value="random">Random</option>
             <option value="maxScoreSpot" selected>maxScoreSpot</option>
         </select><br>
         <br>
