improve code readability

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168931196-3"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'UA-168931196-3');
+        gtag('config', 'UA-168931196-3');
     </script>
 
 </head>
@@ -57,6 +57,7 @@
 
     <script src='./js/main.js' defer></script>
     <script src="./js/ai.js" defer></script>
+    <script src="./js/aiUtil.js"></script>
     <script src="./js/settings.js"></script>
 </body>
 
