add ev1 and ev2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <option value="none">No AI</option>
             <option value="random">Random</option>
             <option value="maxScoreSpot">maxScoreSpot</option>
-            <option value="cmax">Ching's max</option>
+            <option value="cmax_ev1" selected>Ching's max_ev1</option>
+            <option value="cmax_ev2" selected>Ching's max_ev2</option>
         </select><br><br>
 
         <label for="whiteAi">White</label>
@@ -47,7 +48,8 @@
             <option value="none">No AI</option>
             <option value="random">Random</option>
             <option value="maxScoreSpot">maxScoreSpot</option>
-            <option value="cmax" selected>Ching's max</option>
+            <option value="cmax_ev1" selected>Ching's max_ev1</option>
+            <option value="cmax_ev2" selected>Ching's max_ev2</option>
         </select><br>
         <br>
         <label for="delay">AI time delay: </label>
