--- a/index.html
+++ b/index.html
@@ -35,23 +35,15 @@
 
         <h1>Config</h1>
         <label for="blackAi">Black</label>
-        <select name="blackAi" id="blackAi">
-            <option value="none">No AI</option>
-            <option value="random">Random</option>
-            <option value="maxScoreSpot">maxScoreSpot</option>
-            <option value="cmax_ev1" selected>Ching's max_ev1</option>
-            <option value="cmax_ev2" selected>Ching's max_ev2</option>
-        </select><br><br>
+        <select name="blackAi" id="blackAi"></select>
+
+        <br><br>
 
         <label for="whiteAi">White</label>
-        <select name="whiteAi" id="whiteAi">
-            <option value="none">No AI</option>
-            <option value="random">Random</option>
-            <option value="maxScoreSpot">maxScoreSpot</option>
-            <option value="cmax_ev1" selected>Ching's max_ev1</option>
-            <option value="cmax_ev2" selected>Ching's max_ev2</option>
-        </select><br>
-        <br>
+        <select name="whiteAi" id="whiteAi"></select>
+
+        <br><br>
+
         <label for="delay">AI time delay: </label>
         <input type="number" name="delay" min="0" value="0.76" step="0.01" id="delay"><br><br>
         <div id="ok">OK</div>
