add Ching's min ev3

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="./js/settings.js"></script>
     <script src="./js/cmax.js"></script>
     <script src="./js/evaluate.js"></script>
+    <script src="./js/cmin.js"></script>
 </body>
 
 </html>
