--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 
         <label for="delay">AI time delay: </label>
         <input type="number" name="delay" min="0" value="0.76" step="0.01" id="delay"><br><br>
-        <div id="ok">OK</div>
+        <div id="ok" title="(enter)">OK</div>
+        <a id="about" href="./about">About</a>
 
     </div>
     <div id="settings">Settings</div>
     <div id="newGame">New Game</div>
+
 
     <script src='./js/main.js' defer></script>
     <script src="./js/ai.js" defer></script>
