--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Reversi</title>
     <link rel='stylesheet' href='./style.css'>
     <meta name="author" content="ching367436">
-    <meta name="keyword" content="Reversi">
+    <meta name="keyword" content="Reversi, othello, 黑白棋, AI">
     <meta name="discription" content="Reversi">
     <link rel="shortcut icon" type="images/x-icon" href="https://ching367436.github.io/icon/Ching367436.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
