--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" type="images/x-icon" href="https://ching367436.github.io/icon/Ching367436.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="./js/settings.js" defer></script>
+    <script src='./js/reversi.js' defer></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168931196-3"></script>
     <script>
@@ -54,13 +57,11 @@
     <div id="newGame">New Game</div>
 
 
-    <script src='./js/main.js' defer></script>
-    <script src="./js/ai.js" defer></script>
-    <script src="./js/aiUtil.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/cmax.js"></script>
-    <script src="./js/evaluate.js"></script>
-    <script src="./js/cmin.js"></script>
+    <script src="./js/ai.js" async></script>
+    <script src="./js/aiUtil.js" async></script>
+    <script src="./js/cmax.js" async></script>
+    <script src="./js/evaluate.js" async></script>
+    <script src="./js/cmin.js" async></script>
 </body>
 
 </html>
