divided style.css into two files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset='UTF-8'>
     <title>Reversi</title>
-    <link rel='stylesheet' href='./style.css'>
+    <link rel='stylesheet' href='./style/config.css'>
+    <link rel="stylesheet" href="./style/board.css">
     <meta name="author" content="ching367436">
     <meta name="keyword" content="Reversi, othello, 黑白棋, AI">
     <meta name="discription" content="Reversi">
