--- a/instruction/index.html
+++ b/instruction/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1>Alpha Beta Pruning</h1>
-    <p>click on right side of image to go to next image</p>
+    <p>click on right part of the image to go to next image</p>
     <img src="./alpha_beta_pruning/1.png" alt="img">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </body>
 
 </html>
