use webp format to improve performance

--- a/instruction/index.html
+++ b/instruction/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Alpha Beta Pruning</h1>
     <p>click on right part of the image to go to next image</p>
-    <img src="./alpha_beta_pruning/1.png" alt="img">
+    <img src="./alpha_beta_pruning/1.webp" alt="img">
     <script src="./script.js" defer></script>
 </body>
 
