--- a/instruction/index.html
+++ b/instruction/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Alpha Beta Pruning</h1>
-    <p>click on right side of the image to go to next image</p>
+    <p>click on right side of the image to go to the next image</p>
     <img src="./alpha_beta_pruning/1.webp" alt="img">
     <script src="./script.js" defer></script>
 </body>
