move script tags to head

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <script src="./js/settings.js" defer></script>
     <script src='./js/reversi.js' defer></script>
 
+    <script src="./js/ai.js" defer></script>
+    <script src="./js/aiUtil.js" defer></script>
+    <script src="./js/cmax.js" defer></script>
+    <script src="./js/evaluate.js" defer></script>
+    <script src="./js/cmin.js" defer></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168931196-3"></script>
     <script>
@@ -58,11 +64,6 @@
     <div id="newGame">New Game</div>
 
 
-    <script src="./js/ai.js" async></script>
-    <script src="./js/aiUtil.js" async></script>
-    <script src="./js/cmax.js" async></script>
-    <script src="./js/evaluate.js" async></script>
-    <script src="./js/cmin.js" async></script>
 </body>
 
 </html>
