rename aiUtil aiUtils

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src='./js/reversi.js' defer></script>
 
     <script src="./js/ai.js" defer></script>
-    <script src="./js/aiUtil.js" defer></script>
+    <script src="./js/aiUtils.js" defer></script>
     <script src="./js/cmax.js" defer></script>
     <script src="./js/evaluate.js" defer></script>
     <script src="./js/cmin.js" defer></script>
