--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <div id='chess-board'>
-        <span id='message'>Black's Move</span>
+        <span id='message'>Black's Turn</span>
 
     </div>
 
