--- a/index.html
+++ b/index.html
@@ -52,20 +52,24 @@
     <div id="configBoard">
 
         <h1>Config</h1>
-        <label for="blackAi">Black</label>
-        <select name="blackAi" id="blackAi"></select>
+        <div>
+            <label for="blackAi">Black</label>
+            <select name="blackAi" id="blackAi"></select>
+        </div>
+        <div>
+            <label for="whiteAi">White</label>
+            <select name="whiteAi" id="whiteAi"></select>
+        </div>
 
-        <br><br>
+        <div>
+            <label for="delay">AI delay: </label>
+            <input type="number" name="delay" min="0" value="0.76" step="0.01" id="delay"><br><br>
+        </div>
 
-        <label for="whiteAi">White</label>
-        <select name="whiteAi" id="whiteAi"></select>
-
-        <br><br>
-
-        <label for="delay">AI time delay: </label>
-        <input type="number" name="delay" min="0" value="0.76" step="0.01" id="delay"><br><br>
-        <div id="ok" title="OK(enter)">OK</div>
-        <a id="about" href="./about">About</a>
+        <div>
+            <a id="about" href="./about">About</a>
+            <div id="ok" title="OK(enter)">OK</div>
+        </div>
 
     </div>
     <div id="settings" title="Settings(s)">Settings</div>
